package com.carservice.CarService.commission;

public enum CommissionStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    CANCELED
}
