package com.carservice.CarService.wholesaler;

public class WholesalerAdapterSTARTHURT {
}
